# llm4cov_oss

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  index.html  pyproject.toml
images/: draft_design.html
scripts/: agentic_rounds_metrics.py  batch_query_agentic_round.py  batch_query_direct_infer.py  batch_query_eval.py  batch_query_react_round.py  batch_query_vanilla.py  data_contamination_detect.py  datasets_stats.py  react_rounds_metrics.py  run_vllm_eval_config.py  select_direct_infer_samples.py  select_direct_infer_samples_ablation.py  select_vanilla_samples.py  select_vanilla_samples_ablation.py  synthetic_data_filter.py  synthetic_data_parse.py  upload_to_hub.py
src/llm4cov/: __init__.py
src/llm4cov/datasets/: eval.py  filter.py  load.py  rtl_preprocess.py  types.py
src/llm4cov/eda_client/: protocol.md  remote_exec.py  remote_sync.py
src/llm4cov/llm_query/: formatted_query.py  parse.py  patch_apply.py  prompt_build.py  types.py
src/llm4cov/syn_data_gen/: framework.py  prompt_inject.py  reasoning_gen.py
tests/: test_direct_infer_workflow.py  test_remote_exec.py  test_rtl_preprocess.py  test_vanilla_workflow.py
tests/resources/: counter.sv  tb_counter.sv
